change hero image and stop elements from overflowing

--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@ a.nav-link img:hover {
 .hero {
     background-color: rgb(0, 0, 0);
     text-align: center;
-    height: 100vh;
+    min-height: 100vh;
     width: 100%;
     padding-bottom: 100px;
 
@@ -86,8 +86,8 @@ a.nav-link img:hover {
 
 .hero img {
     text-align: center;
-    height: 300px;
-    width: 300px;
+    height: auto;
+    width: 450px;
 }
 
 .hero p {
